--- a/index.html
+++ b/index.html
@@ -51,6 +51,34 @@
             </nav>
             <!-- FIM DO MENU DA PÁGINA -->
 
+            <!-- COMEÇO DO SLIDER -->
+            <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="img/home/CL1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/home/CL2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="img/home/CL3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">
+                        Previous
+                    </span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">
+                        Next
+                    </span>
+                </a>
+            </div>
+            <!-- FIM DO SLIDER -->
+
             <!-- INICIO DO RODAPÉ -->
             <footer class="page-footer font-small indigo" style="background-color: #DCDCDC;" id="desceai">
                 <br>
