--- a/promocao.html
+++ b/promocao.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Venha comprar na melhor loja de automoveis do século XXI"/>
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
-        <title></title>
+        <title>Eagle's Car</title>
     </head>
     <body>
             <!-- INICIO DO MENU DA PÁGINA -->
