--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="description" content="Venha comprar na melhor loja de automoveis do século XXI"/>
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+        <!-- Link para converter a imagem .PNG para .ICO : https://www.convertico.com/ -->
+        <link rel="shortcut icon" href="img/IconeAba.ico" type="image/x-icon"/>
         <title>Eagle's Car</title>
     </head>
     <body>
@@ -50,7 +52,7 @@
                 </div>
             </nav>
             <!-- FIM DO MENU DA PÁGINA -->
-
+            
             <!-- COMEÇO DO SLIDER -->
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                 <div class="carousel-inner">
@@ -78,7 +80,51 @@
                 </a>
             </div>
             <!-- FIM DO SLIDER -->
-
+            <br>
+            <br>
+            <br>
+            <table>
+                <td style="width: 30%;">
+                    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel" >
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="img/home/CL2.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="img/home/CL1.jpg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="img/home/CL3.jpg" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </div>
+                </td>
+                <td>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et 
+                    tincidunt leo. Pellentesque interdum varius ante ac varius. Cras 
+                    mauris felis, viverra nec ipsum non, hendrerit faucibus lorem. Sed 
+                    sapien enim, consectetur sed felis eget, suscipit placerat ipsum. 
+                    Pellentesque convallis, nunc eu placerat placerat, libero nulla 
+                    euismod libero, et imperdiet risus justo eget mi. Morbi non auctor 
+                    tellus. Pellentesque gravida ullamcorper diam. Praesent hendrerit 
+                    pretium dolor id malesuada. Pellentesque habitant morbi tristique 
+                    senectus et netus et malesuada fames ac turpis egestas. Suspendisse
+                     auctor eros in ornare finibus. Vestibulum egestas augue libero. 
+                     Vivamus malesuada diam tortor. Aliquam a ligula ac tellus aliquet 
+                     consequat in vitae enim. Nullam vehicula mollis nunc quis ultrices.
+                </td>
+            </table>
+            <br>
+            <br>
+            <br>
             <!-- INICIO DO RODAPÉ -->
             <footer class="page-footer font-small indigo" style="background-color: #DCDCDC;" id="desceai">
                 <br>
