--- a/populares.html
+++ b/populares.html
@@ -6,6 +6,8 @@
         <meta name="description" content="Venha comprar na melhor loja de automoveis do século XXI"/>
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+        <!-- Link para converter a imagem .PNG para .ICO : https://www.convertico.com/ -->
+        <link rel="shortcut icon" type="image/x-icon" href="img/IconeAba.ico"/>
         <title>Eagle's Car</title>
     </head>
     <body>
