--- a/luxo.html
+++ b/luxo.html
@@ -7,16 +7,14 @@
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
         <!-- Link para converter a imagem .PNG para .ICO : https://www.convertico.com/ -->
-        <link rel="shortcut icon" href="img/IconeAba.ico" type="image/x-icon"/>
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
         <title>Eagle's Car</title>
     </head>
     <body>
             <!-- INICIO DO MENU DA PÁGINA -->
             <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
-                <div class="container">
-                    <a class="navbar-brand" href="index.html">
-                        Eagle's Car
-                    </a>
+                <div class="container-fluid">
+                    <img src="img/favicon.ico" width="45" href="index.html">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
