--- a/promocao.html
+++ b/promocao.html
@@ -14,9 +14,11 @@
             <!-- INICIO DO MENU DA PÁGINA -->
             <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
                 <div class="container-fluid">
-                    <img src="img/favicon.ico" width="45" href="index.html">
+                    <a href="index.html">
+                        <img src="img/favicon.ico" width="45">
+                    </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ml-auto">
