--- a/bmw.html
+++ b/bmw.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css"/>
         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
         <!-- Link para converter a imagem .PNG para .ICO : https://www.convertico.com/ -->
-        <link rel="shortcut icon" href="img/menu_pag/favicon.ico" type="image/x-icon"/>
+        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico"/>
         <title>Eagle's Car</title>
     </head>
     <body>
@@ -15,36 +15,36 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light shadow fixed-top">
                 <div class="container-fluid">
                     <a href="index.html">
-                        <img src="img/menu_pag/logoSite.png" width="45" title="Home">
+                        <img src="img/favicon.ico" width="45">
                     </a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="bmw.html">
-                                    <img src="img/bmw/logo.png" style="width: 30px; margin-right: 10px;" title="BMW"/>
+                                <a class="nav-link" href="promocao.html">
+                                    Promoções
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="tesla.html">
-                                    <img src="img/tesla/logo.png" style="width: 30px; margin-right: 10px;" title="Tesla"/>
+                                <a class="nav-link" href="luxo.html">
+                                    Luxo
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="mercedes.html">
-                                    <img src="img/mercedes/logo.png" style="width: 30px; margin-right: 10px;" title="Mercedes"/>
+                                <a class="nav-link" href="populares.html">
+                                    Populares
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#contato">
-                                    <img src="img/menu_pag/logoContato.png" style="width: 30px; margin-right: 10px;" title="Contato"/>
+                                    Contato
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="orcamento.html">
-                                    <img src="img/menu_pag/logoOrcamento.png" style="width: 30px; margin-right: 10px;" title="Orçamento"/>
+                                    Orçamento
                                 </a>
                             </li>
                         </ul>
@@ -57,13 +57,13 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="img/menu_pag/C1_BMW_SLIDER.jpg" class="d-block w-100 img-fluid" alt="...">
+                        <img src="img/home/CL1.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/menu_pag/C2_TESLA_SLIDER.jpg" class="d-block w-100 img-fluid" alt="...">
+                        <img src="img/home/CL2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/menu_pag/C3_MERCEDES_SLIDER.jpg" class="d-block w-100 img-fluid" alt="...">
+                        <img src="img/home/CL3.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
@@ -99,22 +99,22 @@
                         </div>
                         <div class="col-md-2 mb-3">
                             <h6 class="text-uppercase font-weight-bold">
-                                <a href="bmw.html">
-                                    BMW
+                                <a href="promocoes.html">
+                                    Promoções
                                 </a>
                             </h6>
                         </div>
                         <div class="col-md-2 mb-3">
                             <h6 class="text-uppercase font-weight-bold">
-                                <a href="tesla.html">
-                                    Tesla
+                                <a href="luxo.html">
+                                    Luxo
                                 </a>
                             </h6>
                         </div>
                         <div class="col-md-2 mb-3">
                             <h6 class="text-uppercase font-weight-bold">
-                                <a href="mercedes.html">
-                                    Mercedes
+                                <a href="populares.html">
+                                    Populares
                                 </a>
                             </h6>
                         </div>
