fixed names companies on menu

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="tesla.html">
-                                    <img src="img/tesla/logo.png" style="width: 30px; margin-right: 10px;" title="Tesla"/>
+                                    <img src="img/tesla/logo.png" style="width: 30px; margin-right: 10px;" title="Tesla Motors"/>
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="mercedes.html">
-                                    <img src="img/mercedes/logo.png" style="width: 30px; margin-right: 10px;" title="Mercedes"/>
+                                    <img src="img/mercedes/logo.png" style="width: 30px; margin-right: 10px;" title="Mercedes Benz"/>
                                 </a>
                             </li>
                             <li class="nav-item">
