--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <img src="img/menu_pag/C2_TESLA_SLIDER.jpg" class="d-block w-100 img-fluid" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="img/menu_pag/C3_MERCEDES_SLIDER.jpg" class="d-block w-100 img-fluid" alt="...">
+                        <img src="img/menu_pag/C3_MERCEDES_SLIDER.jpg" class="d-block w-100 img-fluid" alt="..." style="background-size: cover">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
