--- a/bmw.html
+++ b/bmw.html
@@ -81,6 +81,213 @@
         </div>
         <!-- FIM DO SLIDER -->
 
+        <!-- INICIO DOS CARDS DE PROMOÇÃO -->
+        <br>
+        <br>
+        <h1 id="promoCar">
+            Veiculos em promoção
+        </h1>
+        <br>
+        <br>
+        <div class="card-group">
+            <div class="card">
+                <img src="img/bmw/promoCar/C1_CARD.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        BMW Série 1 Hatch
+                    </h5>
+                    <p class="card-text">
+                        BMW Série 1, um veículo ágil e compacto com uma aparência esportiva
+                        e moderna. A dianteira exibe um novo design, que inclui a grade em 
+                        forma de rim característica da BMW e os elegantes faróis LED. A 
+                        traseira apresenta os cativantes faróis em forma de L e o interior 
+                        ergonômico proporciona inúmeras possibilidades de organização. 
+                    </p>
+                    <p class="card-text">
+                        <small class="text-muted">
+                            A partir de R$ 165.950,00 à vista
+                        </small>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/bmw/promoCar/C2_CARD.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        BMW Série 2 Active Tourer
+                    </h5>
+                    <p class="card-text">
+                        O BMW Série 2 Active Tourer comprova que as dimensões compactas,
+                        a funcionalidade e a diversidade podem ser perfeitamente combinadas
+                        em um design dinâmico. Esse veículo está preparado para enfrentar
+                        qualquer situação, quer sejam atividades esportivas ou no dia a dia.
+                    </p>
+                    <br>
+                    <p class="card-text">
+                        <small class="text-muted">
+                            A partir de R$ 171.950,00 à vista
+                        </small>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/bmw/promoCar/C3_CARD.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">
+                        BMW Série 3 Sedã
+                    </h5>
+                    <p class="card-text">
+                        Nem bem caiu na estrada o novo BMW Série 3 já está deixando tudo para 
+                        trás, incluindo convenções e expectativas. Mais uma vez o ícone mostra 
+                        como reinventar a si mesmo. Afinal de contas, com a linguagem de design
+                        pioneira, ele representa o alvorecer de uma nova era. Impulsionando o
+                        verdadeiro sedã esportivo há motores ainda mais potentes and eficientes.
+                    </p>
+                    <p class="card-text">
+                        <small class="text-muted">
+                            A partir de R$ 219.950,00 à vista
+                        </small>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- FIM DOS CARDS DE PROMOÇÃO -->
+
+        <!-- COMEÇO DO CATÁLAGO TODO -->
+        <br>
+        <br>
+        <h1>
+            Catálago:
+        </h1>
+        <br>
+        <br>
+        <div class="card-group">
+                <div class="card">
+                    <img src="img/bmw/promoCar/C1_CARD.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            BMW Série 1 Hatch
+                        </h5>
+                        <p class="card-text">
+                            BMW Série 1, um veículo ágil e compacto com uma aparência esportiva
+                            e moderna. A dianteira exibe um novo design, que inclui a grade em 
+                            forma de rim característica da BMW e os elegantes faróis LED. A 
+                            traseira apresenta os cativantes faróis em forma de L e o interior 
+                            ergonômico proporciona inúmeras possibilidades de organização. 
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">
+                                A partir de R$ 165.950,00 à vista
+                            </small>
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/bmw/promoCar/C2_CARD.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            BMW Série 2 Active Tourer
+                        </h5>
+                        <p class="card-text">
+                            O BMW Série 2 Active Tourer comprova que as dimensões compactas,
+                            a funcionalidade e a diversidade podem ser perfeitamente combinadas
+                            em um design dinâmico. Esse veículo está preparado para enfrentar
+                            qualquer situação, quer sejam atividades esportivas ou no dia a dia.
+                        </p>
+                        <br>
+                        <p class="card-text">
+                            <small class="text-muted">
+                                A partir de R$ 171.950,00 à vista
+                            </small>
+                        </p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="img/bmw/promoCar/C3_CARD.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            BMW Série 3 Sedã
+                        </h5>
+                        <p class="card-text">
+                            Nem bem caiu na estrada o novo BMW Série 3 já está deixando tudo para 
+                            trás, incluindo convenções e expectativas. Mais uma vez o ícone mostra 
+                            como reinventar a si mesmo. Afinal de contas, com a linguagem de design
+                            pioneira, ele representa o alvorecer de uma nova era. Impulsionando o
+                            verdadeiro sedã esportivo há motores ainda mais potentes and eficientes.
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted">
+                                A partir de R$ 219.950,00 à vista
+                            </small>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="card-group">
+                    <div class="card">
+                        <img src="img/bmw/promoCar/C1_CARD.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                BMW Série 1 Hatch
+                            </h5>
+                            <p class="card-text">
+                                BMW Série 1, um veículo ágil e compacto com uma aparência esportiva
+                                e moderna. A dianteira exibe um novo design, que inclui a grade em 
+                                forma de rim característica da BMW e os elegantes faróis LED. A 
+                                traseira apresenta os cativantes faróis em forma de L e o interior 
+                                ergonômico proporciona inúmeras possibilidades de organização. 
+                            </p>
+                            <p class="card-text">
+                                <small class="text-muted">
+                                    A partir de R$ 165.950,00 à vista
+                                </small>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="img/bmw/promoCar/C2_CARD.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                BMW Série 2 Active Tourer
+                            </h5>
+                            <p class="card-text">
+                                O BMW Série 2 Active Tourer comprova que as dimensões compactas,
+                                a funcionalidade e a diversidade podem ser perfeitamente combinadas
+                                em um design dinâmico. Esse veículo está preparado para enfrentar
+                                qualquer situação, quer sejam atividades esportivas ou no dia a dia.
+                            </p>
+                            <br>
+                            <p class="card-text">
+                                <small class="text-muted">
+                                    A partir de R$ 171.950,00 à vista
+                                </small>
+                            </p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="img/bmw/promoCar/C3_CARD.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">
+                                BMW Série 3 Sedã
+                            </h5>
+                            <p class="card-text">
+                                Nem bem caiu na estrada o novo BMW Série 3 já está deixando tudo para 
+                                trás, incluindo convenções e expectativas. Mais uma vez o ícone mostra 
+                                como reinventar a si mesmo. Afinal de contas, com a linguagem de design
+                                pioneira, ele representa o alvorecer de uma nova era. Impulsionando o
+                                verdadeiro sedã esportivo há motores ainda mais potentes and eficientes.
+                            </p>
+                            <p class="card-text">
+                                <small class="text-muted">
+                                    A partir de R$ 219.950,00 à vista
+                                </small>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                
+        <!-- FIM DO CATÁLAGO TODO -->
+
         <!-- INICIO DO RODAPÉ -->
         <footer class="page-footer font-small indigo" style="background-color: #DCDCDC;" id="desceai">
             <br>
