arrumando as cagadas do migay

--- a/tesla.html
+++ b/tesla.html
@@ -139,7 +139,7 @@
         <!-- FIM DOS CARDS DE PROMOÇÃO -->
 
         <!-- COMEÇO DO VIDEO -->
-        <video loop width="100%" autoplay controls>
+        <video loop width="100%" autoplay>
             <source src="img/tesla/cars/VIDEO_ROADSTER.mp4" type="video/mp4">
         </video>
         <!-- FIM DO VIDEO -->
@@ -262,16 +262,9 @@
         <!-- FIM DO JUMBOTRON -->
         
         <!-- INICIO DO RODAPÉ -->
-<<<<<<< HEAD
+
         <footer class="page-footer font-small indigo" style="background-color: #DCDCDC; margin-top: -2%;" id="desceai">
-            <!-- <br>
-            <br>
-            <br>
-            <br>
-            <br> -->
-=======
         <footer class="page-footer font-small indigo" style="background-color: #DCDCDC;" id="desceai">
->>>>>>> 72a7ac672e385f0df33a8b67bb3c50c61ae8467f
             <div class="container">
                 <div class="row text-center d-flex justify-content-center pt-5 mb-3">
                     <div class="col-md-2 mb-3">
