--- a/bmw.html
+++ b/bmw.html
@@ -147,7 +147,7 @@
         </div>
         <!-- FIM DOS CARDS DE PROMOÇÃO -->
         <video loop autoplay controls width="100%">
-            <source src="img/bmw/cars/VIDEO_SONGS.mp4">
+            <source src="img/bmw/cars/VIDEO_BMW.mp4">
         </video>
         <!-- COMEÇO DO CATÁLAGO TODO -->
         <div class="card-group">
