fix responsive form

--- a/contato.html
+++ b/contato.html
@@ -48,7 +48,7 @@
         </nav>
         <!-- FIM DO MENU DA PÁGINA -->
 
-        <div class="container" id="formulario">
+        <div class="container-fluid" id="formulario">
             <h1>
                 Fale conosco
             </h1>
@@ -57,7 +57,7 @@
                 <input class="form-control" type="text" name="sobrenome" id="sobrenome" placeholder=" Sobrenome" maxlength="20" size="15" required/>
                 <input class="form-control" type="email" name="email" id="email" placeholder=" E-mail" size="30" required/>
                 <input class="form-control" type="tel" name="telefone" id="telefone" placeholder=" Telefone">
-                <textarea name="msg" id="msg" placeholder="Digite sua mensagem aqui..." rols="50" cols="30"></textarea>
+                <textarea class="form-control" name="msg" id="msg" placeholder="Digite sua mensagem aqui..." rols="50" cols="30"></textarea>
                 <br>
                 <button class="btn btn-primary" type="submit">Enviar</button>
             </form>
